# sigdb

./: .gitignore  README.md  private-key.pem  pyproject.toml  ruff.json
.github/workflows/: reekeer-bot.yml
scripts/: reekeerBot.py
src/sigdb/: __init__.py  groups.py
src/sigdb/compression/: __init__.py  zstd.py
src/sigdb/core/: __init__.py  api.py  compiler.py  reader.py
src/sigdb/crypto/: __init__.py  ed25519.py
src/sigdb/format/: __init__.py  trie.py
src/sigdb/internal/: groups.py
src/sigdb/storage/: __init__.py  fileio.py
src/sigdb/types/: __init__.py  exceptions.py  models.py  rules.py
src/sigdb/utils/: __init__.py  hashing.py  varint.py
tests/: test_container_errors.py  test_crypto.py  test_varint.py  validate_lib.py
